# fortee_proposal_cli

./: .gitignore  Cargo.toml  LICENCE  Makefile  README.md
.github/workflows/: build.yml  check.yml  lint.yml  test.yml
data/html/: output.html
data/proposal/: proposal.json
src/: controller.rs  infrastructure.rs  main.rs  middleware.rs  presentation.rs  use_case.rs
src/controller/: get_proposal_data_controller.rs
src/domain/: proposal.rs
src/domain/proposal/: proposal_data_model.rs  proposal_html.rs  proposal_image.rs  proposal_json.rs  proposal_json_file.rs  proposal_model.rs
src/infrastructure/: copier.rs  extractor.rs  fetcher.rs  file_path_provider.rs  reader.rs  types.rs  validator.rs  writer.rs
src/infrastructure/copier/: file_copier.rs
src/infrastructure/extractor/: extract_first_content_from_text.rs  extract_og_image_url.rs  extract_schedule.rs  extract_speaker.rs  extract_title.rs  extract_title_and_name.rs  extract_track.rs
src/infrastructure/fetcher/: fetch_fortee_proposal_page.rs  fetch_og_image.rs
src/infrastructure/file_path_provider/: file_path_provider_trait.rs  get_file_path.rs  html_file_path_provider.rs  image_file_path_provider.rs  json_file_path_provider.rs  (+1 more)
src/presentation/: helper.rs  pretty_json_presenter.rs  send_message.rs  show_json.rs  terminal_message_presenter.rs
src/use_case/: build_proposal_json_file_from_html.rs  build_structured_information.rs  download_fortee_proposal_page_html.rs  download_og_image.rs
tools/: command_installer.sh  install.sh  install_dev_tools.sh  publish.sh  uninstall.sh  watcher.sh
(+14 files in other folders)
