[package]
name = "fortee_proposal_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.2"
regex = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
log = "0.4.20"
colored = "2"